--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  .button{
+    background-color: blue;
+    width: 70px;
+    height: 30px;
+    text-align: center;
+    border-radius: 1rem;
+    cursor: pointer;
+  }
